// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitySelector should exclude location if location does not exist 1`] = `Array []`;

exports[`CitySelector should exclude location if location is not live 1`] = `Array []`;

exports[`CitySelector should filter for all non-live cities if filterText is "wirschaffendas" 1`] = `
Array [
  CityModel {
    "_aliases": null,
    "_code": "nonlive",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": null,
    "_live": false,
    "_longitude": null,
    "_name": "Notlive",
    "_prefix": null,
    "_pushNotificationsEnabled": false,
    "_sortingName": "Nonlive",
    "_tunewsEnabled": false,
  },
]
`;

exports[`CitySelector should filter for existing and live cities 1`] = `
Array [
  CityModel {
    "_aliases": null,
    "_code": "city",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": null,
    "_live": true,
    "_longitude": null,
    "_name": "City",
    "_prefix": null,
    "_pushNotificationsEnabled": false,
    "_sortingName": "City",
    "_tunewsEnabled": false,
  },
  CityModel {
    "_aliases": null,
    "_code": "otherCity",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": null,
    "_live": true,
    "_longitude": null,
    "_name": "Other city",
    "_prefix": null,
    "_pushNotificationsEnabled": false,
    "_sortingName": "OtherCity",
    "_tunewsEnabled": false,
  },
  CityModel {
    "_aliases": null,
    "_code": "yetanothercity",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": null,
    "_live": true,
    "_longitude": null,
    "_name": "Yet another city",
    "_prefix": null,
    "_pushNotificationsEnabled": false,
    "_sortingName": "Yetanothercity",
    "_tunewsEnabled": false,
  },
]
`;
